# epub_to_vertical

./: CMakeLists.txt  README.md  form.cpp  main.cpp  reFormate.cpp  toComplex.cpp  toComplex.py
socket_include/: Codetest.py  Logger.cpp  Logger.h  MYString.h  MyFile.cpp  MyFile.h  encoding.h  self_made.h
testy/: CHangeStringTest.cpp
